2010-05-17    <jmerelo@localhost.localdomain>

	* Makefile.PL: Añadido File::Slurp a las dependencias

Revision history for ES-Senado

0.0.1  Sat Apr 17 09:38:55 2010
       Initial release.
